fix: overflowing text on long domain name

--- a/src/app/(cloud)/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/InfraOnline/index.module.scss
+++ b/src/app/(cloud)/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/InfraOnline/index.module.scss
@@ -36,11 +36,12 @@
     @include body;
     margin: 0;
     width: max-content;
+    max-width: 100%;
     gap: calc(var(--base) / 2);
     transition: opacity .3s cubic-bezier(.165, .84, .44, 1);
 
     &:first-of-type {
-      @include h3;
+      @include h4;
       margin: 0;
       gap: var(--base);
     }
